# Custom-MCPs

./: .dockerignore  .env.example  .gitignore  .importlinter  .mcp.json.example  CLAUDE.md  Dockerfile  Makefile  README.md  prek.toml  pyproject.toml  railway.json  render.yaml  server.json  smithery.yaml
.agents/rules/: claude-md-guide.md  lint_links_egress.md
.agents/skills/local-sandbox/: SKILL.md
.agents/skills/manage-agent-config/: SKILL.md
.agents/skills/new-agent-rule/: SKILL.md
.agents/skills/onboarding/: SKILL.md
.agents/skills/push-release/: SKILL.md
.claude/hooks/: session-start.sh
.claude/rules/: codex-claude-sync.md  lint_links_egress.md
.claude/skills/: local-sandbox  new-agent-rule  push-release
.claude/skills/usage/: SKILL.md
.codex/agents/: thermo-nuclear-code-quality-review.toml
.cursor/rules/: makefile-commands.md
.github/: CODEOWNERS
.github/workflows/: a_test_target_tests.yml  agents_validate.yaml  folder-size.yaml  jules-find-outdated-docs.yml  jules-prune-unnecessary-code.yml  jules-sync-translations.yml  linter_require_ruff.yaml  markdown-link-lint.yaml  mcp-registry-publish.yml  mcp_conformance.yaml  nightly_tests.yaml  release.yml  vulture_dead_code.yaml
api_server/: deprecation.py  idempotency.py  pagination.py  runner.py  server.py
api_server/ask/: __init__.py  core.py  retriever.py  signatures.py
api_server/auth/: api_key_auth.py  authkit_auth.py
api_server/billing/: limits.py  stripe_config.py
api_server/middleware/: error_handler.py  mcp_auth.py  rate_limit.py
api_server/routes/: agentic_payments.py  ask.py  auth.py  google_oauth.py  health.py  services.py  stream.py  well_known.py
api_server/routes/google/: __init__.py  webhooks.py
api_server/routes/payments/: checkout.py  metering.py  subscription.py  webhooks.py
common/: config_models.py  global_config.py  global_config.yaml  production_config.yaml  subscription_config.yaml  token_encryption.py
db/: engine.py
db/migrations/: env.py
db/migrations/versions/: 007_add_google_tokens.py  008_add_idempotency_keys.py  009_add_gmail_watch_webhooks.py  010_add_thread_curation.py
db/models/: __init__.py  gmail_push.py  google_tokens.py  idempotency_keys.py  thread_curation.py  webhooks.py
docs/: middleware.ts  railway.toml  translation-guide.md
docs/app/: global.css  layout.tsx
docs/components/: icons.tsx
docs/content/docs/: deployment.mdx  gmail-webhooks.mdx  index.es.mdx  index.ja.mdx  index.mdx  index.zh.mdx  meta.json  quickstart.mdx
docs/lib/: layout.shared.tsx  source.ts
init/: onboard.py
landing-page/: .gitignore  README.md  astro.config.mjs  package.json  railway.toml  server.ts
landing-page/public/: openapi.json  server.json
landing-page/public/.well-known/: mcp.json
landing-page/scripts/: gen-discovery.ts  gen-og.py  gen-openapi.ts
landing-page/src/agent/: content.ts
landing-page/src/components/: AskAi.astro  ChatMock.astro  CodeBlock.astro  Comparison.astro  ComparisonTable.astro  ConnectWidget.astro  CtaButtons.astro  Faq.astro  FeatureVisual.astro  Features.astro  FinalCta.astro  Footer.astro  GetStarted.astro  Hero.astro  Nav.astro  PillarCards.astro  Pricing.astro  Testimonials.astro  TrustStrip.astro  WebMcp.astro
landing-page/src/config/: tool-surface.generated.json
landing-page/src/layouts/: Base.astro
landing-page/src/pages/: agents.md.ts  api.astro  auth.md.ts  compare.astro  index.astro  llms-full.txt.ts  llms.txt.ts  pricing.md.ts  skills.sh.ts  (+5 more)
manual_docs/: deploy.md
manual_docs/readme_examples/: open_source.md
mcp_server/: COMMON_TERMS.md  MCP_UI_ARCHITECTURE.md  MCP_UI_EDGE_CASES.md  _tool_factory.py  server.py  url_elicitation.py
mcp_server/app_tools/: __init__.py  _auth_guard.py  gmail_composer.py  gmail_inbox.py  settings.py
mcp_server/dev_preview/: README.md  build.mjs  package.json  smoke.mjs  tsconfig.json
mcp_server/enhancers/: __init__.py  base.py  config.py  gmail_attachment.py  gmail_composer.py  gmail_inbox.py  schemas.py  webhook_settings.py
models/: a2a.py  ask.py  curation.py  doctor.py  gmail.py  gmail_watch.py  pagination.py  patch.py  webhook_settings.py  webhooks.py
scripts/: check_ai_writing.py  check_blind_except_justification.py  check_file_length.py  check_folder_sizes.sh  export_tool_surface.py  install-skills.sh  lint_links.py  mcp_conformance.py  sync_agent_config.py  sync_skills.py
services/: __init__.py  config_svc.py  curation_ledger.py  doctor_svc.py  gmail_attachments_svc.py  gmail_curate_svc.py  gmail_draft_helpers.py  gmail_drafts_svc.py  gmail_messages_svc.py  gmail_svc.py  gmail_watch_svc.py  inbox_curation_svc.py  webhook_delivery_svc.py  webhook_settings_svc.py  webhooks_svc.py
skills/gmail-mcp/: SKILL.md
src/cli/: CLAUDE.md  app.py  completions.py  scaffold.py  security.py  state_store.py  telemetry.py  update.py
src/payments/: registry.py
src/utils/: cli_help.py  current_user.py  interactive.py  output.py  stdin.py  theme.py
tasks/: prd-inbox-curation-ledger.md
tests/: test_agent_card.py  test_agentic_payments.py  test_agentic_payments_api.py  test_api_catalog.py  test_api_server.py  test_ask_e2e.py  test_ask_unit.py  test_billing.py  test_config_env_priority.py  test_curation_migration.py  test_db_models.py  test_deprecation.py  test_enhancers.py  test_gmail_attachment_enhancer.py  test_gmail_composer_enhancer.py  test_gmail_inbox_enhancer.py  test_gmail_services.py  test_gmail_watch.py  test_google_oauth.py  test_idempotency.py  test_inbox_curation.py  test_logging_thread_safety.py  test_mcp_e2e.py  test_mcp_oauth.py  test_mcp_remote.py  test_mcp_server.py  test_onboard.py  test_pagination.py  test_server_card.py  test_services.py  test_token_encryption.py  test_url_elicitation.py  test_web_bot_auth.py  test_webhook_settings.py  test_webhooks.py
tests/cli/: test_cli.py  test_doctor.py  test_scaffold.py  test_secrets.py  test_security.py  test_stdin.py  test_telemetry.py
tests/data/: a2a_agent_card.schema.json
tests/healthcheck/: test_env_var_loading.py  test_pydantic_type_coercion.py
utils/llm/: dspy_inference.py  dspy_langfuse.py
(+96 files in other folders)
